<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_text">--</string>
    <string name="app_name">HeartRateMonitor</string>
    
    <string name="guide_first_howtotext">如何测量？</string>
    <string name="guide_first_howtouse">轻轻将你的食指放在你手机背面的摄像头和闪光灯上，以确保他们已完全被覆盖。保持这个姿势直到测试完成。</string>
    
    <string name="guide_second_history_title">历史信息</string>
    <string name="guide_second_history_content">在历史页面你可以查看你过去的测量情况。\n如果使用自己的账号，可以查看历史记录，并且只有自己才能看见。</string>
    
    <string name="guide_third_load_title">登陆介绍</string>
    <string name="guide_third_load_content">在登陆页面你可以创建自己的用户账号，用以保存历史数据，并且此数据只有你可以看见。</string>
    
    <string name="home_title">Heart Rate</string>
    
    <string name="cancel">放弃</string>
    <string name="save">保存</string>
    
    <string name="little60">&lt; 60</string>
    <string name="between60and90">60 - 90</string>
    <string name="larger90">&gt; 90</string>
    
    <string name="history_list_timetitle">测试时间</string>
    <string name="history_list_time_default">2013-12-11</string>
    <string name="history_list_heartnum_default">00</string>
    <string name="history_list_heart_bpm">心率（BPM）</string>
    
    <string name="share_trash">删除/分享</string>
    <string name="share">分享</string>
    <string name="trash">删除</string>
    <string name="trashdescript">你真的想删除这次的测量吗？</string>
    <string name="canceltrash">取消</string>
    
    <string name="login_title">登陆</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_registbutton">注册新账号</string>
    <string name="login_registcontent">填写下面的信息完成注册</string>
    <string name="login_regist_title">注册</string>
    <string name="noempty_regist_username">用户名不能为空</string>
    <string name="noempty_regist_password">密码不能为空</string>
    <string name="name_or_pass_error">用户名或密码错误，请重新输入</string>
    
    <string name="userdb_uniqname">该名字已注册，请换一个名字</string>
    <string name="userdb_error">数据库异常，请重新尝试</string>
    <string name="userdb_add_success">注册成功</string>
    <string name="quitecurrentuser">退出当前用户</string>
    
    <string name="press_again_exist">再按一次退出</string>
    
</resources>
