<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
   	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:gravity="center"
	    android:background="@drawable/blue_line" >
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login_registbutton"
		    android:textSize="20sp"
		    android:textColor="@color/white" />
	</RelativeLayout>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_registcontent"
	    android:textSize="18sp"
	    android:layout_gravity="center"
	    android:paddingTop="20dp"
	    android:paddingBottom="20dp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp" >
	   	<EditText
		    android:id="@+id/regist_username"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:textSize="16sp"
		    android:background="@drawable/form_input_bg"
		    android:hint="@string/login_username" />
		<View
		    android:layout_width="match_parent"
		    android:layout_height="20dp" />
		<EditText
		    android:id="@+id/regist_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword"
		    android:singleLine="true"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:textSize="16sp"
		    android:background="@drawable/form_input_bg"
		    android:hint="@string/login_password" />
		<View
		    android:layout_width="match_parent"
		    android:layout_height="20dp" />
		<RelativeLayout
		    android:id="@+id/regist_registbutton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:onClick="true"
		    android:background="@drawable/login_loginbutton_selector" >
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/login_regist_title"
			    android:textSize="18sp"
			    android:textColor="@color/white" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>
