<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:background="@color/black"
	    android:gravity="center_vertical" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:textColor="@color/red"
	        android:textSize="18sp"
	        android:paddingLeft="10dp"
	        android:layout_centerVertical="true" />
	    
	    <!-- gone 以后再说 -->
	    <ImageView
	        android:id="@+id/historyresultshow_share"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_share"
	        android:layout_toLeftOf="@+id/historyresultshow_trash"
	        android:paddingRight="10dp"
	        android:visibility="gone" />
	    <ImageView
	        android:id="@+id/historyresultshow_trash"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_trash"
	        android:layout_alignParentRight="true"
	        android:paddingRight="10dp" /> 
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >
        	<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="测量时间"
			    android:textColor="@color/black"
			    android:textSize="20sp" />
        	<TextView
				android:id="@+id/history_time"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="2013-12-13"
			    android:textColor="@color/blue"
			    android:textSize="20sp" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hr_type_custom_add"
            android:layout_gravity="center"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="20dp" >
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
			<TextView
				android:id="@+id/history_heartnum"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="00"
			    android:textColor="@color/black"
			    android:textSize="60sp" />
      	</LinearLayout>
      	<LinearLayout
        	android:layout_width="match_parent"
           	android:layout_height="wrap_content"
           	android:layout_weight="1"
           	android:paddingTop="20dp"
           	android:gravity="center"
           	android:orientation="vertical" >
		   	<ImageView
		    	android:layout_width="wrap_content"
          	 	android:layout_height="wrap_content"
          	 	android:src="@drawable/heart_red"
          	 	 />
		   <TextView
		        android:layout_width="wrap_content"
          	 	android:layout_height="wrap_content"
          	 	android:text="心率（BPM）"
          	 	android:textSize="20sp" />
      	</LinearLayout>
	</LinearLayout>
      
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <LinearLayout
            android:id="@+id/afterbeating_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="5dp" >
			<ImageView
			    android:layout_width="100dp"
			    android:layout_height="10dp"
			    android:src="@color/green"
			    android:layout_gravity="center_horizontal" />
			<ImageView
			    android:layout_width="100dp"
			    android:layout_height="10dp"
			    android:src="@color/orange"
			    android:layout_gravity="center_horizontal" />
			<ImageView
			    android:layout_width="100dp"
			    android:layout_height="10dp"
			    android:src="@color/red"
			    android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <ImageView
            android:id="@+id/history_point_index"
		    android:layout_width="5dp"
		    android:layout_height="20dp"
		    android:src="@color/blackalpha"
		    android:layout_alignTop="@+id/afterbeating_green"
	    />
	</RelativeLayout>
       
    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="6dp"
        android:orientation="horizontal" >
		<LinearLayout
       	    android:layout_width="100dp"
       	    android:layout_height="wrap_content"
       	    android:gravity="right" >
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/little60"
        	    android:textSize="18sp" />
       	</LinearLayout>
       	<LinearLayout
       	    android:layout_width="100dp"
       	    android:layout_height="wrap_content"
       	    android:gravity="center_horizontal" >
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/between60and90"
        	    android:textSize="18sp"
        	    android:layout_gravity="center_horizontal" />
        </LinearLayout>
       	<TextView
       	    android:layout_width="100dp"
       	    android:layout_height="wrap_content"
       	    android:text="@string/larger90"
       	    android:textSize="18sp" />
	</LinearLayout>

</LinearLayout>
